# claw-code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/PRPs/prds/: agent-loop-refactor.prd.md
docs/: s01-agent-loop.md  s02-more-tools.md  s03-todo.md
src/claw_code/: __init__.py  agent.py  config.py  main.py
src/claw_code/tools/: __init__.py  bash.py  edit.py  read.py  sandbox.py  write.py
tests/: conftest.py  test_agent.py  test_bash_tool.py  test_edit.py  test_main.py  test_read.py  test_sandbox.py  test_todo.py  test_write.py
